--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="container">
       <h1 class="text-glow">Doxr Toolkit Documentation</h1>
         <p>This is the doxr toolkit.
-<br><br>You can use it like this:<br><br><code>&lt;script src="https://toolkit.doxr.repl.co/kit.js"&gt;&lt;/script&gt;</code></p>
+<br><br>You can use it like this:<br><br><code>&lt;script src="https://toolkit.js.org/kit.js"&gt;&lt;/script&gt;</code></p>
       <p>This applies to mainly vanilla JS and it's to make Javascript easier. You will find types; SS stands for "Send Stuff;" it returns things but doesn't do anything by itself. Type DS stands for "Do Stuff;" it does stuff, and it's like a normal function that makes JS simpler.</p>
       <hr>
       <code>element(id)</code>
