--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
               <div id="test" class="test" style="color: white;">By doxr</div>
       <h1 class="text-glow">Doxr Toolkit Documentation</h1>
         <p>This is the doxr toolkit.
-<br><br>You can use it like this:<br><br><code>&lt;script src="https://cdn.jsdelivr.net/gh/DoxrGitHub/jstoolkit/kit.js"&gt;&lt;/script&gt;</code></p>
-      <p>This applies to mainly vanilla JS and it's to make Javascript easier. You will find types; SS stands for "Send Stuff;" it returns things but doesn't do anything by itself. Type DS stands for "Do Stuff;" it does stuff, and it's like a normal function that makes JS simpler.</p>
-      <p>Note: when using the Class equivalents, all items with that class are affected.</p>
+<br><br>You can use it like this:<br><br><code>&lt;script src="https://cdn.jsdelivr.net/gh/DoxrGitHub/jstoolkit/kit.js"&gt;&lt;/script&gt;</code><br><br>That might not be up-to-date. If you want the up-to-date version, please use this. but it is not recommended.</p>
+      <p><code>&lt;script src="https://toolkit.js.org/kit.js"&gt;&lt;/script&gt;</code></p>
+      <p>This applies to mainly vanilla JS and it's to make Javascript easier.</p>
+      <p>Note: when using the Class equivalents, all elements with that class are affected.</p>
       <hr>
       <code>element(id)</code>
       <p>The equivalent to <code>document.getElementById(id)</code>; this uses an element's ID to get an element. Regard the next function for classes.</p>
@@ -30,6 +31,9 @@
       <hr>
       <code>style(id, styletype, stylevalue)</code>
       <p>The equivalent to <code>document.getElementById(id).style.styletype = stylevalue</code>; this uses an element's ID to change it's style. <code>styletype</code> is what style is being changed and <code>stylevalue</code> is <code>styletype</code>'s value.</p>
+      <hr>
+      <code>styleC(class, styletype, stylevalue)</code>
+      <p>The class equivalent to <code>style()</code>.</p>
     </section>
     <script src="https://replitcss.hecker40.repl.co/replit.js">
     </script>
